Compilation on 9 & run with 9